--- a/src/components/Restaurant-details/ReserveYourTable.css
+++ b/src/components/Restaurant-details/ReserveYourTable.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 
 }
 .popup.inner{
@@ -39,11 +40,12 @@
     padding: 23px;
 }
 .reserveYourTable {
-    background: #6c6a6a;
-    color: #fff;
+    background: #97b3d2;
+    color: #050505;
     padding: 34px;
     border-radius: 10px;
     text-align: left;
+    box-shadow: -1px 2px 17px 3px #090707;
 }
 .tableInput{
     color: #e00000;
@@ -58,3 +60,10 @@
     margin-left: -126px;
     margin-top: 10px;
 }
+.relative.overflow-x-auto.shadow-md.sm\:rounded-lg {
+    margin-right: 74px;
+    margin-left: -165px;
+}
+
+
+
