--- a/index.css
+++ b/index.css
@@ -6,9 +6,9 @@
 *{
     font-family: 'Poppins', sans-serif;
 }
-body {
-  background: rgb(244, 244, 244);
-}
+/*body {*/
+/*  background: rgb(244, 244, 244);*/
+/*}*/
 button, [type="button"], [type="reset"], [type="submit"] {
     -webkit-appearance: button;
     background-color: #f04400fa;
