update[branch,dashboard,myder,myriews,setting]

--- a/src/Css/Owner Css/owner.css
+++ b/src/Css/Owner Css/owner.css
@@ -67,3 +67,12 @@ main {
 
     margin-right: -74px;
 }
+
+.LogoutButtom{
+    display: flex;
+    align-items:center;
+    padding: 50px 10px  15px;
+    font-size: 20px;
+    gap: 10px;
+    cursor: pointer;
+}
